tests/syntax_error/return_void.jou
def foo() -> void:  # Error: void is not a valid return type, use '-> None' if the function does not return a value
    pass
